--- a/style.css
+++ b/style.css
@@ -74,6 +74,13 @@ footer {
   position: absolute;
   bottom: 10px;
   opacity: 0.4;
+  color: white;
+  word-spacing: 2px;
+}
+footer a,
+footer a:visited {
+  color: white;
+  text-decoration: none;
 }
 @media (min-width: 800px) {
   main {
